overflow solved

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
   overflow: hidden;
 }
 
@@ -453,7 +456,7 @@
 }
 
 .product__info {
-  height: 40px;
+  height: 34px;
   padding: 10px 14px;
   border-top: 1px solid #e4e5ec;
   overflow: hidden;
